# bao

./: Cargo.toml
bao_bin/: Cargo.toml
bao_bin/src/: main.rs
src/: decode.rs  encode.rs
