[package]
name = "bao"
version = "0.12.0"
authors = ["Jack O'Connor"]
description = "an implementation of BLAKE3 verified streaming"
license = "CC0-1.0 OR Apache-2.0"
repository = "https://github.com/oconnor663/bao"
documentation = "https://docs.rs/bao"
readme = "README.md"
edition = "2018"

[dependencies]
arrayref = "0.3.6"
arrayvec = "0.7.2"
blake3 = "1.3.1"

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tempfile = "3.3.0"
rand_chacha = "0.3.1"
rand_xorshift = "0.3.0"
page_size = "0.4.2"
