[package]
name = "bao_bin"
version = "0.12.0"
authors = ["Jack O'Connor"]
description = "the command line utility that's part of the bao crate"
license = "CC0-1.0 OR Apache-2.0"
repository = "https://github.com/oconnor663/bao"
readme = "../README.md"
edition = "2018"

[[bin]]
name = "bao"
path = "src/main.rs"

[features]
default = ["rayon"]
neon = ["blake3/neon"]
rayon = ["blake3/rayon"]

[dependencies]
arrayref = "0.3.6"
bao = { path = "..", version = "0.12" }
blake3 = "1.3.1"
docopt = "1.1.1"
failure = "0.1.8"
hex = "0.4.3"
memmap = "0.7.0"
serde = { version = "1.0.137", features = ["derive"] }

[dev-dependencies]
duct = "0.13.5"
rand = "0.8.5"
tempfile = "3.3.0"
